# WizardTowerGame

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  CollisionObject.cpp  CollisionObject.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  Equipment.cpp  Equipment.h  FightMenager.cpp  FightMenager.h  FightingObject.cpp  FightingObject.h  FileLoader.cpp  FileLoader.h  Game.cpp  Game.h  Interface.cpp  Interface.h  LICENSE  MainMenu.cpp  MainMenu.h  Maps.cpp  Maps.h  Menu.cpp  Menu.h  MovableObjects.cpp  MovableObjects.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Quest.cpp  Quest.h  README.md  (+13 more)
Equipment/: Armor.cpp  Armor.h  Equipment.cpp  Equipment.h  Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.h
Interface/: Camera.h
Interface/Hud/: Hud.cpp  Hud.h
Interface/InventoryGui/: InventoryGui.cpp  InventoryGui.h
Interface/LootGui/: LootGui.cpp  LootGui.h
Interface/StatsGui/: StatsGui.cpp  StatsGui.h
assets/: story.story
assets/enemy/: fox.enemy  pies.enemy
assets/maps/: dungeon.map  enemy.enemy  first.map  startLocation.map  test.map
